<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register New Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">Your BMI</string>
    <string name="bmi_value">26.55</string>
    <string name="back">BACK</string>
    <string name="add_weight">Add Weight</string>
    <string name="save">SAVE</string>
    <string name="date">DATE(day month year)</string>
    <string name="re_password">re password</string>
    <string name="add_sleep">Add Sleep</string>
    <string name="time">Time (HH:MM)</string>
</resources>
