<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp">

    <EditText
        android:drawableLeft="@drawable/ic_person"
        android:layout_marginTop="15dp"
        android:hint="@string/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:drawableLeft="@drawable/ic_name_person"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:drawableLeft="@drawable/ic_calendar"
        android:layout_marginTop="15dp"
        android:hint="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/register"/>

</LinearLayout>