<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp">

    <EditText
        android:drawableLeft="@drawable/ic_height"
        android:layout_marginTop="15dp"
        android:hint="@string/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:drawableLeft="@drawable/ic_weight"
        android:layout_marginTop="15dp"
        android:hint="@string/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/calculate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/your_bmi"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:hint="@string/bmi_value"
        android:textSize="18dp"/>

</LinearLayout>