<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp">

    <Button
        android:id="@+id/sleep_back1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_back"
        android:text="@string/back"/>

    <EditText
        android:id="@+id/sleep_date1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/sleep_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"/>

    <EditText
        android:id="@+id/wake_up_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"/>

    <Button
        android:id="@+id/sleep_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>